# krABMaga

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE  Makefile  README.md  prek.toml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: basic.yml  coverage.yml  management.yml  mpi.yml  release.yml  rust-ci.yml  sync-site.yml
.github/workflows/install-deps/: action.yml
DBdashmap/: Cargo.toml  atomic_lock.csv  ris.csv  std_sync.csv
DBdashmap/benches/: bench_ourmap.rs
DBdashmap/examples/: prova.rs
DBdashmap/src/: lib.rs  lock.rs  serde.rs  t.rs  util.rs  vecchia_dash.rs
DBdashmap/src/mapref/: mod.rs  multiple.rs  one.rs
assets/emojis/: emoji.ron
benches/: benchmark.rs  constant_agent.rs  constant_density.rs  constant_field.rs  scaling.rs
examples/: boids.rs  boids_par.rs  boids_test.rs  boids_ui.rs  simple.rs  simplenetwork.rs  socialnetwork.rs  viralnetwork.rs
examples/antsforage/: README.md  ant.rs  ants_grid.rs  main.rs  obstacles_grid.rs  sites_grid.rs  state.rs  static_objects.rs  to_food_grid.rs  to_home_grid.rs
examples/antsforage_amethyst/: README.md  agent_adapter.rs  environment.rs  main.rs  main_system_bundle.rs  static_object.rs
examples/antsforage_amethyst/assets/: pixel_spritesheet.ron
examples/antsforage_amethyst/config/: display.ron
examples/antsforage_amethyst/resources/: ants_grid.rs  mod.rs  obstacles_grid.rs  sites_grid.rs  to_food_grid.rs  to_home_grid.rs
examples/antsforage_amethyst/systems/: ant.rs  fps.rs  mod.rs  pheromone_tint_handler.rs  tint_handler.rs
examples/antsforaging/: README.md
examples/antsforaging/antsforaging/: main.rs
examples/antsforaging/antsforaging/resources/: ant.rs  ants_grid.rs  obstacles_grid.rs  sites_grid.rs  state.rs  static_objects.rs  to_home_grid.rs
examples/antsforaging/antsforaging_ui/: main.rs
examples/antsforaging/antsforaging_ui/config/: display.ron
examples/antsforaging/antsforaging_ui/model/: ant.rs  ants_grid.rs  mod.rs  obstacles_grid.rs  sites_grid.rs  state.rs  to_food_grid.rs
examples/antsforaging/antsforaging_ui/visualization/: ant.rs  custom_system_bundle.rs  mod.rs  pheromone.rs  pheromone_system.rs  static_object.rs  vis_state.rs
examples/boids/: README.md  boids_ui_par.rs
examples/boids/boids_ui/: main.rs
examples/boids/boids_ui/model/: boids_state.rs  mod.rs
examples/boids/boids_ui/visualization/: bird.rs  (+2 more)
examples/boids_amethyst/: README.md  agent_adapter.rs  environment.rs  main.rs
examples/boids_amethyst/config/: display.ron
examples/boids_amethyst/systems/: flocker.rs  fps.rs  mod.rs
examples/boids_visualization/: main.rs
examples/boids_visualization/model/: bird.rs  boids_state.rs
examples/boids_visualization/visualization/: bird.rs  vis_state.rs
lcov.info/: coverage.json  index.html
lcov.info/src/: index.html  lib.rs.html
lcov.info/src/engine/: agent.rs.html  agentimpl.rs.html  index.html  location.rs.html  priority.rs.html  schedule.rs.html  state.rs.html
lcov.info/src/utils/: dbdashmap.rs.html  index.html  ref.rs.html
lcov.info/tests/: index.html  lib.rs.html
lcov.info/tests/engine/: dense_number_grid_2d.rs.html  dense_object_grid_2d.rs.html  field_2d.rs.html  index.html  network.rs.html  sparse_number_grid_2d.rs.html  sparse_object_grid_2d.rs.html
lcov.info/tests/explore/: index.html  simulate.rs.html
src/: agent.rs  agentimpl.rs  bag_ref.rs  field.rs  field2D.rs  field_2d.rs  field_2d_double_buffer_dashmap.rs  grid_2d.rs  lib.rs  location.rs  main.rs  par_schedule.rs  priority.rs  schedule.rs  simple_grid_2d.rs  simstate.rs  simulstate.rs  state.rs
src/engine/: agent.rs  agentimpl.rs  components.rs  location.rs  mod.rs  par_schedule.rs  priority.rs  resources.rs  rng.rs  schedule.rs  schedule_par.rs  simulation.rs  state.rs  systems.rs
src/engine/components/: double_buffer.rs  position.rs
src/engine/field/: field.rs  field_2d.rs  mod.rs  network.rs  number_grid_2d.rs  object_grid_2d.rs
src/engine/fields/: dense_number_grid_2d.rs  dense_object_grid_2d.rs  field.rs  field_2d.rs  field_3d.rs  grid_option.rs  hnetwork.rs  kdtree.rs  kdtree_mpi.rs  mod.rs  network.rs  sparse_number_grid_2d.rs  sparse_object_grid_2d.rs
src/engine/resources/: engine_configuration.rs
src/engine/systems/: double_buffer_sync.rs  engine_config_update.rs
src/exploration/: genetic.rs  model_exploration.rs
src/exploration/mpi/: genetic.rs  model_exploration.rs
src/explore/: bayesian.rs  bayesian_opt.rs  explore_state.rs  genetic.rs  mod.rs  model_exploration.rs  random_search.rs
src/explore/aws/: genetic.rs  mod.rs
src/explore/mpi/: genetic.rs  model_exploration.rs
src/utils/: dbdashmap.rs  mod.rs  ref.rs  util.rs
src/utils/monitoring/: app.rs  crossterm.rs  mod.rs  ui.rs
src/visualization/: agent_render.rs  asset_handle_factory.rs  main_system_bundle.rs  mod.rs  on_state_init.rs  renderable.rs  simulation_descriptor.rs  sprite_render_factory.rs  visualization.rs  visualization_state.rs  wrappers.rs
src/visualization/field/: mod.rs  network.rs  number_grid_2d.rs
src/visualization/fields/: mod.rs  network.rs  number_grid_2d.rs  object_grid_2d.rs
src/visualization/plugin/: lib.rs  mod.rs
src/visualization/plugins/: mod.rs
src/visualization/systems/: camera_system.rs  init_system.rs  mod.rs  renderer_system.rs  simulation_system.rs  ui_system.rs
src/visualization/utils/: arrow.rs  fixed_timestep.rs  mod.rs  updated_time.rs
tests/: .travis.yml  field2d.rs  hashmap_test.rs  lib.rs  network.rs  schedule.rs  schedule_helpers.rs
tests/engine/: dense_number_grid_2d.rs  dense_object_grid_2d.rs  field_2d.rs  hnetwork.rs  mod.rs  network.rs  schedule.rs  sparse_number_grid_2d.rs  sparse_object_grid_2d.rs
tests/engine/parallel/: dense_number_grid_2d.rs  dense_object_grid_2d.rs  field_2d.rs  mod.rs  network.rs  sparse_number_grid_2d.rs  sparse_object_grid_2d.rs
tests/explore/: bayesian.rs  bayesian_opt.rs  mod.rs  simulate.rs
tests/model/: mod.rs
tests/model/flockers/: bird.rs  mod.rs  state.rs
tests/utils/: mod.rs  mynode.rs
(+35 files in other folders)
