[package]
name = "DBdashmap"
version = "3.11.10"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/xacrimon/dashmap"
homepage = "https://github.com/xacrimon/dashmap"
description = "Blazing fast concurrent HashMap for Rust."
readme = "README.md"
documentation = "https://docs.rs/dashmap"
keywords = ["atomic", "concurrent", "hashmap"]
categories = ["concurrency", "algorithms", "data-structures"]

[profile.release]
opt-level = 3
debug = true

[features]
default = []
raw-api = []


[dependencies]
num_cpus = "1.13.0"
ahash = "0.3.8"
serde = { version = "1.0.114", optional = true, features = ["derive"] }
cfg-if = "0.1.10"
hashbrown = "0.8.0"
dashmap="3.11.10"
criterion="0.3.3"
lazy_static = "1.4.0"

[package.metadata.docs.rs]
features = ["raw-api", "serde"]

[[example]]
name="prova"
path="examples/prova.rs"

[[bench]]
name = "bench_ourmap"
harness = false